deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocp4-exp01-web
  namespace: scw-exp01-initcont
spec:
  selector:
    app: pythonflask
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
