deployment/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ocp4-exp01-web
spec:
  to:
    kind: Service
    name: ocp4-exp01-web
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
